--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 
 
   <link href="./assets//img//brand/un-women-logo.png" rel="icon" type="image/x-icon" />
-  <title>unwomenmarketsquare</title>
+  <title>UN WOMEN MARKET SQUARE</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
   <app-root>
     <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
       <i class="spinner-grow spinner-grow-sm"></i>
-      <span class="m-1">|| Loading... || UN-WOMENMARKETSQUARE ||</span>
+      <span class="m-1">|| Loading Data... ||</span>
     </div>
   </app-root>
 </body>
